--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <header class="header">
         <div class="container">
-
+            <div class="header__box">
+                <div class="header__elem red"></div>
+                <div class="header__elem blue"></div>
+                <div class="header__elem yellow"></div>
+                <div class="header__elem green"></div>
+            </div>
         </div>
     </header>
 
