--- a/index.html
+++ b/index.html
@@ -8,13 +8,38 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
+    <header class="header sales">
+        <div class="container header__section">
             <div class="header__box">
-                <div class="header__elem red"></div>
-                <div class="header__elem blue"></div>
-                <div class="header__elem yellow"></div>
-                <div class="header__elem green"></div>
+                <div class="header__elem header__elem_1">
+                    <p>Shop</p><span>Online</span>
+                </div>
+                <div class="header__elem header__elem_2">
+                    <button class="header__elem_2__button">Меню</button>
+                </div>
+                <div class="header__elem header__elem_3">
+                    <input class="header__elem_3__input" type="text" placeholder="Я ищу...">
+                    <button class="header__elem_3__button" type="submit"></button>
+                </div>
+                <div class="header__elem header__elem_4">
+                    <ul class="header__elem_4__ul">
+                        <li class="header__elem_4__li-item header__elem_4__li-item_1">
+                            <img class="header__elem_4__li-item__img header__elem_4__li-item__img_1" src="img/profile.svg" alt="Профиль">
+                            <span class="header__elem_4__li-item__text">Профиль</span>
+                        </li>
+                        <li class="header__elem_4__li-item header__elem_4__li-item_2">
+                            <img class="header__elem_4__li-item__img header__elem_4__li-item__img_2" src="img/basket.svg" alt="Корзина">
+                            <div class="header__elem_4__li-item__img_2__circle">
+                                <span class="header__elem_4__li-item__img_2__count">2</span>
+                            </div>
+                            <span class="header__elem_4__li-item__text">Корзина</span>
+                        </li>
+                        <li class="header__elem_4__li-item header__elem_4__li-item_3">
+                            <img class="header__elem_4__li-item__img header__elem_4__li-item__img_3" src="img/heart.svg" alt="Избранное">
+                            <span class="header__elem_4__li-item__text">Избранное</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
