start main block

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    <header class="header sales">
+    <header class="header">
         <div class="container header__section">
             <div class="header__box">
                 <div class="header__elem header__elem_1">
@@ -45,9 +45,43 @@
     </header>
 
     <main class="main">
-        <section class="section">
+        <section class="section sales">
             <div class="container">
-                
+                <ul class="sales__list">
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                    <li class="sales__item">
+                        <img src="" alt="" class="sales__image">
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
