added pictures in main section

--- a/index.html
+++ b/index.html
@@ -49,37 +49,37 @@
             <div class="container">
                 <ul class="sales__list">
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/main.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/1-st.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/2-nd.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/3-rd.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/4-th.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/5-th.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/6-th.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/7-th.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/8-th.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/9-th.jpg" alt="" class="sales__image">
                     </li>
                     <li class="sales__item">
-                        <img src="" alt="" class="sales__image">
+                        <img src="img/10-th.jpg" alt="" class="sales__image">
                     </li>
                 </ul>
             </div>
