added text in main section 1920

--- a/index.html
+++ b/index.html
@@ -50,33 +50,66 @@
                 <ul class="sales__list">
                     <li class="sales__item">
                         <img src="img/main.jpg" alt="" class="sales__image">
+                        <p class="sales__text">-50% на все ноутбуки</p>
+                        <p class="sales__timer-title">До конца акции:</p>
+                        <div class="sales__timer">
+                            <p class="sales__timer-days">3 дня</p>
+                            <p class="sales__timer-hours">8 часов</p>
+                            <p class="sales__timer-minutes"><span class="sales__timer-minutes_bold">43 </span>минуты</p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/1-st.jpg" alt="" class="sales__image">
+                        <p class="sales__text"><span class="sales__text_bold">Книга </span>- лучший подарок</p>
                     </li>
                     <li class="sales__item">
                         <img src="img/2-nd.jpg" alt="" class="sales__image">
+                        <p class="sales__text">Время скидок!</p>
+                        <div class="sales__discount-background">
+                            <p class="sales__discount-text">-25%</p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/3-rd.jpg" alt="" class="sales__image">
+                        <div class="sales__discount-background">
+                            <p class="sales__discount-text">-40%</p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/4-th.jpg" alt="" class="sales__image">
+                        <div class="sales__discount-background">
+                            <p class="sales__discount-text">Вторая пара кроссовок <span class="sales__discount-text_bold">в подарок!</span></p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/5-th.jpg" alt="" class="sales__image">
+                        <p class="sales__text">Идеи новогодних подарков</p>
                     </li>
                     <li class="sales__item">
                         <img src="img/6-th.jpg" alt="" class="sales__image">
+                        <p class="sales__text">Выгодно в декабре!</p>
+                        <div class="sales__discount-background">
+                            <p class="sales__discount-text">-15%</p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/7-th.jpg" alt="" class="sales__image">
+                        <div class="sales__discount-background">
+                            <p class="sales__discount-text">Новогодние украшения</p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/8-th.jpg" alt="" class="sales__image">
+                        <div class="sales__discount-background">
+                            <p class="sales__discount-text">-55%</p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/9-th.jpg" alt="" class="sales__image">
+                        <p class="sales__text">На бытовую химию</p>
+                        <div class="sales__discount-background">
+                            <p class="sales__discount-text">-25%</p>
+                        </div>
                     </li>
                     <li class="sales__item">
                         <img src="img/10-th.jpg" alt="" class="sales__image">
